Youtube/Networking Policies/service-a-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: staging-ingress
  namespace: staging # build-namespace
spec:
  podSelector:
    matchLabels:
      app: service-a # build-pod-label
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          env: production
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: production

# ---

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: production
#   namespace: production # build
# spec:
#   podSelector:
#     matchLabels:
#       app: service-c # build
#   egress:
#   - {}
#   ingress:
#   - {}
