Youtube/Networking Policies/service-c-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-service-c
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: service-c
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          env: staging
    - podSelector:
        matchLabels:
          app: service-b
